--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/colors-generator": "^7.14.2",
     "@mantine/core": "^7.11.0",
     "@mantine/hooks": "^7.11.0",
     "@svgr/webpack": "^8.1.0",
     "@tabler/icons-react": "^3.19.0",
+    "chroma-js": "^3.1.2",
     "frontend": "file:",
     "next": "^14.2.15",
     "react": "^18",
